--- a/app/templates/logex/loby.html
+++ b/app/templates/logex/loby.html
@@ -2,8 +2,28 @@
 
 {% block Contenido %}
 
-<br>
+<body>
+    <h2 >Tipos de Entrega</h2>
 
-
+        <div class="flete-info1">
+            <h3>Sector central</h3>
+            <p> Entrega en el área central de Santiago <br>
+                Tiene un Precio de 2.500 por producto
+            </p>
+        </div>
+        <div class="flete-info2">
+            <h3>Sector Periférico</h3>
+            <p> Entrega en la siguiente zona de Santiago alejada del centro<br>
+                tiene un precio de 3.000 por producto
+            </p>
+        </div>
+        <div class="flete-info3">
+            <h3>Sector Exterior</h3>
+            <p> Entrega en la Zona más alejada del centro de Santiago<br>
+                tiene un precio de 4.000 por producto
+            </p>
+        </div>
+        
+</body>
 
 {% endblock %}
