--- a/app/static/css/estilo.css
+++ b/app/static/css/estilo.css
@@ -1,19 +1,71 @@
-/* esto es el Body general */
 
-body{ 
-    background-image: url('{% static "img/Fondo.jpg" %}'); 
-    background-size: cover;  
+/* Agrega estilos para el body y el contenido principal */
+body {
+    position: relative;
+    min-height: 100vh;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
 }
 
-/* esto es crear usuario*/
-
-.form-crear-sesion{/* control general del contenedor */
+.form-crear-sesion {
     max-width: 800px;
     margin: 0 auto;
-    margin-left: auto;
+    margin-top: 10px;
+    display: block;
 }
 
 .form-control,
-.btn-success {/* control de las cajas input */
-    margin-top: 10px; 
+.btn-success {
+    margin-top: 10px;
+    display: block;
+}
+
+/* Agrega estilos para las etiquetas h2 */
+h2 {
+    text-align: center;
+}
+
+/* Contenedor principal de las cajas flete-info */
+.fletes-disponibles {
+    display: flex;
+    justify-content: space-around; /* Puedes ajustar esto según tus preferencias */
+}
+
+/* Estilos para las cajas de felte-info */
+.flete-info1,
+.flete-info2,
+.flete-info3 {
+    width: 30%;
+    height: 100%;
+    background-color: #f1f1f1;
+    padding: 20px;
+    margin: 10px;
+}
+/* Estilos para el footer */
+footer {
+    background-color: #f1f1f1;
+    padding: 20px;
+    text-align: center;
+    margin-top: auto; /* Esto asegura que el footer esté pegado en la parte inferior */
+}
+
+/*esto es el css de la creacion de encomiendas*/
+
+
+/* Estilos para la caja que contiene el formulario */
+.encomienda-form {
+    max-width: 500px; /* Ajusta el ancho máximo según tus preferencias */
+    margin: 0 auto; /* Centra la caja horizontalmente */
+    padding: 20px; /* Añade relleno para separar los bordes de la caja del contenido */
+}
+
+/* Estilos para el formulario dentro de la caja */
+.encomienda-form form {
+    margin-top: 20px; /* Espacio entre la parte superior de la caja y el formulario */
+}
+
+/* Estilos para el botón dentro del formulario */
+.encomienda-form form button {
+    width: 100%; /* Hace que el botón ocupe el ancho completo del formulario */
 }
