--- a/app/templates/logex/feed.html
+++ b/app/templates/logex/feed.html
@@ -5,27 +5,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block Titulo %}{% endblock %}</title>
-    <link type='text/css' rel="stylesheet" href='{% static "css/estilo2.css" %}'>
+    <link type='text/css' rel="stylesheet" href='{% static "css/estilo.css" %}'>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </head>
 <body>
     <nav class="navbar navbar-expand navbar-light bg-light">
         <div class="nav navbar-nav">
-            <a class="nav-item nav-link active" href="" aria-current="page">Home <span class="visually-hidden">(current)</span></a>
-            <a class="nav-item nav-link" href="{% url 'profile' %}">Inicio</a>
-            <a class="nav-item nav-link" href="{% url 'new_encomiendas' %}">Agregar Encomienda</a>
-            <a class="nav-item nav-link" href="{% url 'encomiendas' %}">Mostrar Encomiendas</a>
-            <li class="nav-item"><a class="nav-link" href="{% url 'salir' %}">Salir</a></li>
-        </div>
-        <ul class="navbar-nav ml-auto">
             {% if request.user.is_authenticated %}
-                <li class="nav-item"><p class="nav-link">¡Hola, {{ request.user.username }}!</p></li>
+                <a class="nav-item nav-link active" href="" aria-current="page">{{ request.user.username }} <span class="visually-hidden">(current)</span></a>
+                <a class="nav-item nav-link" href="{% url 'profile' %}">Inicio</a>
+                <a class="nav-item nav-link" href="{% url 'new_encomiendas' %}">Agregar Encomienda</a>
+                <a class="nav-item nav-link" href="{% url 'encomiendas' %}">Mostrar Encomiendas</a>
+                <li class="nav-item"><a class="nav-link" href="{% url 'salir' %}">Salir</a></li>
             {% endif %}
-        </ul>
+        </div>
     </nav>
-    <img src="" alt="">
     {% block Contenido %}
     {% endblock %}
 </body>
+
+<footer>
+    <div class="contacto">
+        <h2>Contacto</h2>
+        <button onclick="window.location.href='https://www.instagram.com/grupologex.cl/'">Instagram: GrupoLogex.cl</button><br>
+        <button onclick="window.location.href='https://www.facebook.com/people/Grupo-Logex/100066425122706/?paipv=0&eav=AfZ3L_N1PxWIxGsY2ArfKcjpjuLXIcGk-tgnwv3F-9ELOXR24esXC3oOnkUFBT4XBTY&_rdr'">Facebook: Grupo Logex</button><br>
+        <button onclick="window.location.href='https://wa.me/56977569894'">WhatsApp: +56 9 7756 9894</button>
+    </div>
+</footer>
+
 </html>
