--- a/app/templates/logex/home.html
+++ b/app/templates/logex/home.html
@@ -1,18 +1,5 @@
 {% extends 'logex/Index.html' %}
 
 {% block Contenido %}
-esto es el loby
-<li>1</li>
-<li>1</li>
-<li>1</li>
-<li>1</li>
-<li>1</li>
-<li>1</li>
-<li>1</li>
-<li>1</li>
-<li>1</li>
-<li>1</li>
-<li>1</li>
-<li>1</li>
-<li>1</li>
+esto es home
 {%endblock%}
