--- a/app/templates/logex/nueva_encomienda.html
+++ b/app/templates/logex/nueva_encomienda.html
@@ -6,6 +6,14 @@ Nueva Encomienda
 
 {% block Contenido %}
 
+{% if messages %}
+    {% for message in messages %}
+        <div class="alert alert-{{ message.tags }}">
+            {{ message }}
+        </div>
+    {% endfor %}
+{% endif %}
+
 <div class="encomienda-form">
     <div class="row">
         <div class="col-md-12 mx-auto mt-5">
