--- a/app/templates/registration/login.html
+++ b/app/templates/registration/login.html
@@ -1,15 +1,25 @@
 {% extends 'logex/Index.html' %}
 
 {% block Contenido %}
-    <div>
-        <form method="post">
-
-            {% csrf_token %}
-            <label for="{{ form.username.id_for_label }}">{{ form.username.label_tag }}</label>
-            {{ form.username }}
-            <label for="{{ form.password.id_for_label }}">{{ form.password.label_tag }}</label>
-            {{ form.password }}
-            <button type="submit">Iniciar sesión</button>
-        </form>
+<div class="form-crear-sesion">
+    <div class="row">
+        <div class="col-md-12 mx-auto mt-5">
+            <div class="card">
+                <div class="card-header">Iniciar sesion</div>
+                <div class="card-body">
+                    <form method="post">
+                        {% csrf_token %}
+                        <label for="{{ form.username.id_for_label }}">{{ form.username.label_tag }}</label>
+                        {{ form.username }}
+                        <label for="{{ form.password.id_for_label }}">{{ form.password.label_tag }}</label>
+                        {{ form.password }}
+                        <button class="btn btn-success" type="submit">Iniciar sesión</button>
+                    </form>
+                </div>
+            </div>
+        </div>
     </div>
+</div>
 {% endblock %}
+
+
