--- a/app/templates/logex/nueva_encomienda.html
+++ b/app/templates/logex/nueva_encomienda.html
@@ -23,7 +23,7 @@ Nueva Encomienda
                     <form class="form" method="post">
                         {% csrf_token %}
                         {{ form.as_p }}
-                        <button class="btn btn-success">Agregar Encomienda</button>
+                        <button class="btn btn-primary">Agregar Encomienda</button>
                     </form>
                 </div>
             </div>
