--- a/app/templates/logex/crear_cuenta.html
+++ b/app/templates/logex/crear_cuenta.html
@@ -7,14 +7,14 @@ Crear Cuenta
 {% block Contenido %}
 <div class="form-crear-sesion">
     <div class="row">
-        <div class="col-md-12 mx-auto mt-5">
+        <div class="col-md-5 mx-auto mt-5">
             <div class="card">
                 <div class="card-header">Crear Cuenta</div>
                 <div class="card-body">
                     <form class="form" method="post">
                         {% csrf_token %}
                         {{ form.as_p }}
-                        <button class="btn btn-success">Crear Cuenta</button>
+                        <button class="btn btn-primary">Crear Cuenta</button>
                     </form>
                 </div>
             </div>
