--- a/app/templates/logex/feed.html
+++ b/app/templates/logex/feed.html
@@ -10,11 +10,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </head>
 <body>
-    <nav class="navbar navbar-expand navbar-light bg-light">
+    <nav class="navbar navbar-expand navbar-dark bg-primary">
         <div class="nav navbar-nav">
             {% if request.user.is_authenticated %}
-                <a class="nav-item nav-link active" href="" aria-current="page">{{ request.user.username }} <span class="visually-hidden">(current)</span></a>
-                <a class="nav-item nav-link" href="{% url 'profile' %}">Inicio</a>
+                <a class="nav-item nav-link active" href="{% url 'profile' %}" aria-current="page">{{ request.user.username }}</a>
                 <a class="nav-item nav-link" href="{% url 'new_encomiendas' %}">Agregar Encomienda</a>
                 <a class="nav-item nav-link" href="{% url 'encomiendas' %}">Mostrar Encomiendas</a>
                 <li class="nav-item"><a class="nav-link" href="{% url 'salir' %}">Salir</a></li>
@@ -28,9 +27,9 @@
 <footer>
     <div class="contacto">
         <h2>Contacto</h2>
-        <button onclick="window.location.href='https://www.instagram.com/grupologex.cl/'">Instagram: GrupoLogex.cl</button><br>
-        <button onclick="window.location.href='https://www.facebook.com/people/Grupo-Logex/100066425122706/?paipv=0&eav=AfZ3L_N1PxWIxGsY2ArfKcjpjuLXIcGk-tgnwv3F-9ELOXR24esXC3oOnkUFBT4XBTY&_rdr'">Facebook: Grupo Logex</button><br>
-        <button onclick="window.location.href='https://wa.me/56977569894'">WhatsApp: +56 9 7756 9894</button>
+        <button type="button" class="btn btn-primary" onclick="window.location.href='https://www.instagram.com/grupologex.cl/'">Instagram</button>
+        <button type="button" class="btn btn-primary" onclick="window.location.href='https://www.facebook.com/people/Grupo-Logex/100066425122706/?paipv=0&eav=AfZ3L_N1PxWIxGsY2ArfKcjpjuLXIcGk-tgnwv3F-9ELOXR24esXC3oOnkUFBT4XBTY&_rdr'">Facebook</button>
+        <button type="button" class="btn btn-primary" onclick="window.location.href='https://wa.me/56977569894'">WhatsApp</button>
     </div>
 </footer>
 
