--- a/app/templates/logex/index.html
+++ b/app/templates/logex/index.html
@@ -7,29 +7,30 @@
     <title>{% block Titulo %}{% endblock %}</title>
     <link type='text/css' rel="stylesheet" href='{% static "css/estilo.css" %}'>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </head>
 <body>
-    <nav class="navbar navbar-expand navbar-light bg-light">
+    <nav class="navbar navbar-expand navbar-dark bg-primary">
         <div class="nav navbar-nav">
-            <a class="nav-item nav-link active" href="" aria-current="page">Home <span class="visually-hidden">(current)</span></a>
-            <a class="nav-item nav-link" href="{% url 'index' %}">Inicio</a>
+            <a class="nav-item nav-link active" href="{% url 'index' %}" aria-current="page">Home</a>
             <a class="nav-item nav-link" href="{% url 'profile' %}">Iniciar sesion</a>
             <a class="nav-item nav-link" href="{% url 'Crear_cuenta' %}">Crear cuenta</a>
         </div>
     </nav>
-    
     <div class="Contenido">
         {% block Contenido %}
         {% endblock %}
+        <br>
+        <br>
+        <br>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 <footer>
     <div class="contacto">
         <h2>Contacto</h2>
-        <button onclick="window.location.href='https://www.instagram.com/grupologex.cl/'">Instagram: GrupoLogex.cl</button><br>
-        <button onclick="window.location.href='https://www.facebook.com/people/Grupo-Logex/100066425122706/?paipv=0&eav=AfZ3L_N1PxWIxGsY2ArfKcjpjuLXIcGk-tgnwv3F-9ELOXR24esXC3oOnkUFBT4XBTY&_rdr'">Facebook: Grupo Logex</button><br>
-        <button onclick="window.location.href='https://wa.me/56977569894'">WhatsApp: +56 9 7756 9894</button>
+        <button type="button" class="btn btn-primary" onclick="window.location.href='https://www.instagram.com/grupologex.cl/'">Instagram</button>
+        <button type="button" class="btn btn-primary" onclick="window.location.href='https://www.facebook.com/people/Grupo-Logex/100066425122706/?paipv=0&eav=AfZ3L_N1PxWIxGsY2ArfKcjpjuLXIcGk-tgnwv3F-9ELOXR24esXC3oOnkUFBT4XBTY&_rdr'">Facebook</button>
+        <button type="button" class="btn btn-primary" onclick="window.location.href='https://wa.me/56977569894'">WhatsApp</button>
     </div>
 </footer>
 
