--- a/app/templates/registration/login.html
+++ b/app/templates/registration/login.html
@@ -1,20 +1,26 @@
 {% extends 'logex/Index.html' %}
 
 {% block Contenido %}
-<div class="form-crear-sesion">
-    <div class="row">
-        <div class="col-md-12 mx-auto mt-5">
-            <div class="card">
-                <div class="card-header">Iniciar sesion</div>
-                <div class="card-body">
-                    <form method="post">
-                        {% csrf_token %}
-                        <label for="{{ form.username.id_for_label }}">{{ form.username.label_tag }}</label>
-                        {{ form.username }}
-                        <label for="{{ form.password.id_for_label }}">{{ form.password.label_tag }}</label>
-                        {{ form.password }}
-                        <button class="btn btn-success" type="submit">Iniciar sesión</button>
-                    </form>
+<div class="container">
+    <div class="form-crear-sesion">
+        <div class="row">
+            <div class="col-md-4 mx-auto mt-5">
+                <div class="card">
+                    <div class="card-header">Iniciar sesion</div>
+                    <div class="card-body">
+                        <form method="post">
+                            {% csrf_token %}
+                            <div class="mb-3">
+                                <label for="{{ form.username.id_for_label }}" class="form-label">{{ form.username.label_tag }}</label>
+                                {{ form.username }}
+                            </div>
+                            <div class="mb-3">
+                                <label for="{{ form.password.id_for_label }}" class="form-label">{{ form.password.label_tag }}</label>
+                                {{ form.password }}
+                            </div>
+                            <button class="btn btn-primary" type="submit">Iniciar sesión</button>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
