--- a/app/templates/logex/home.html
+++ b/app/templates/logex/home.html
@@ -5,21 +5,22 @@
 <h2 >Tipos de Entrega</h2>
 <div class="Cards-container">
 
-    <div class="card" style="width: 18rem;">
+    <div class="card w-75 mb-3">
         <div class="card-body">
         <h3 class="card-title">Sector Central</h3>
         <p class="card-text">Entrega en el área central de Santiago <br>Tiene un Precio de 2.500 por producto</p>
         </div>
     </div>
 
-    <div class="card" style="width: 18rem;">
+
+    <div class="card w-75 mb-3">
         <div class="card-body">
         <h3 class="card-title">Sector Periférico</h3>
         <p class="card-text">Entrega en la siguiente zona de Santiago alejada del centro<br>tiene un precio de 3.000 por producto</p>
         </div>
     </div>
 
-    <div class="card" style="width: 18rem;">
+    <div class="card w-75 mb-3">
         <div class="card-body">
         <h3 class="card-title">Sector Exterior</h3>
         <p class="card-text">Entrega en la Zona más alejada del centro de Santiago<br>tiene un precio de 4.000 por producto</p>
